<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_about_gallery"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_place"
            android:icon="@drawable/ic_place_gallery"
            android:title="@string/places" />
        <item
            android:id="@+id/nav_restaurants"
            android:icon="@drawable/ic_restaurant_gallery"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_phrases"
            android:icon="@drawable/ic_phrase_gallery"
            android:title="@string/phrases" />
    </group>

</menu>
