<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="RtlSymmetry"
    android:id="@+id/list_bg_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/left_right_side_margin"
    android:paddingTop="@dimen/top_bottom_margin"
    android:paddingRight="@dimen/left_right_side_margin"
    android:paddingBottom="@dimen/top_bottom_margin">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:src="@color/colorPrimary"
        android:contentDescription="@string/cst_station" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2.5"
        android:orientation="vertical"
        android:paddingStart="10dp">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            android:textSize="20sp"
            android:textColor="@color/font_color"
            android:textStyle="bold"
            android:text="@string/places"/>

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            android:textSize="13sp"
            android:textColor="@color/font_color"
            android:textStyle="italic"
            android:text="@string/sample_address"/>

        <TextView
            android:id="@+id/timing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/top_bottom_margin"
            android:textSize="15sp"
            android:textColor="@color/font_color"
            android:textStyle="italic|bold"
            android:text="@string/every_day_24hrs"/>

    </LinearLayout>

</LinearLayout>